feat: Implement Exam Types management with CRUD operations and UI integration

--- a/src/app/pages/school/configuration/exam-types/exam-types.component.html
+++ b/src/app/pages/school/configuration/exam-types/exam-types.component.html
@@ -1,1 +1,82 @@
 <app-breadcrumbs title="Exam Types" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card" id="examTypes">
+            <div class="card-header border-bottom-dashed">
+                <div class="row g-4 align-items-center">
+                    <div class="col-sm">
+                        <div><h5 class="card-title mb-0"><i class="ri-pencil-ruler-line text-muted fs-18 align-middle me-1">     </i>Exam Types</h5></div>
+                    </div>
+                    <div class="col-sm-auto">
+                        <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button type="button" class="btn btn-primary add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Exam Type</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <generic-app-table 
+                [headers]="headers" 
+                [data]="examTypes" 
+                [showActions]="true"  
+                [showDelete]="false"
+                [customTemplates]="{ 'useWeight': useWeightTemplate, 'academicTermId': academicTermTemplate }"
+                (editClicked)="editModal(content, $event)">
+            </generic-app-table>
+
+                <ng-template #useWeightTemplate let-status let-row="row">
+                        <span>{{ getUseWeightLabel(status) }}</span>
+                </ng-template>
+
+                <ng-template #academicTermTemplate let-academicTermId let-row="row">
+                    <span>{{ getAcademicTermName(academicTermId) }}</span>
+                </ng-template>
+        </div>
+    </div>
+
+    <div id="elmLoader" *ngIf="loading">
+        <div class="spinner-border text-primary avatar-sm" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
+    <ng-template #content role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title" id="modalLabel">{{isCreateMode ? "Create" : "Update"}} Exam Type</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
+        </div>
+        <form  class="tablelist-form" autocomplete="off" [formGroup]="examTypeForm" (ngSubmit)="onSubmit()">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input  type="text" id="name" class="form-control" placeholder="Enter Exam Type Name" formControlName="name">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Academic Term</label>
+                    <ng-select [items]="academicTerms" bindLabel="name" id="academicTerm" bindValue="id" required formControlName="academicTermId" placeholder="Select Academic Term" [ngClass]="{ 'is-invalid': submitted && examTypeForm.controls['academicTermId'].invalid }"></ng-select>
+                    <div class="invalid-feedback">Please select an academic term</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label mb-0">Use Weight</label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="useWeight" [ngClass]="{ 'is-invalid': submitted && examTypeForm.controls['useWeight'].invalid }">
+                        <option selected [ngValue]="null">Select</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback" *ngIf="submitted && examTypeForm.controls['useWeight'].invalid">Please select an option</div>
+                </div>
+                <div class="mb-3">
+                    <label for="weight" class="form-label">Weight</label>
+                    <input  type="number" id="weight" class="form-control" placeholder="Enter Weight" formControlName="weight">
+                </div>  
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
+</div>
