--- a/src/app/pages/school/configuration/exam-types/exam-types.component.html
+++ b/src/app/pages/school/configuration/exam-types/exam-types.component.html
@@ -50,7 +50,8 @@
             <div class="modal-body">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input  type="text" id="name" class="form-control" placeholder="Enter Exam Type Name" formControlName="name">
+                    <input  type="text" id="name" class="form-control" placeholder="Enter Exam Type Name" formControlName="name" [ngClass]="{ 'is-invalid': submitted && examTypeForm.controls['name'].invalid }">
+                    <div class="invalid-feedback">Please enter a name</div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Academic Term</label>
@@ -68,8 +69,9 @@
                 </div>
                 <div class="mb-3">
                     <label for="weight" class="form-label">Weight</label>
-                    <input  type="number" id="weight" class="form-control" placeholder="Enter Weight" formControlName="weight">
-                </div>  
+                    <input type="number" id="weight" class="form-control" placeholder="Enter Weight" formControlName="weight" [ngClass]="{ 'is-invalid': submitted && examTypeForm.controls['weight'].invalid }">
+                    <div class="invalid-feedback" *ngIf="submitted && examTypeForm.controls['weight'].invalid">Weight is required when 'Use Weight' is set to Yes</div>
+                  </div> 
             </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
