--- a/src/app/pages/school/configuration/academics/academic-terms/academic-terms.component.html
+++ b/src/app/pages/school/configuration/academics/academic-terms/academic-terms.component.html
@@ -32,7 +32,7 @@
         <form  class="tablelist-form" autocomplete="off" [formGroup]="academicTermForm" (ngSubmit)="onSubmit()">
             <div class="modal-body">
                 <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
+                    <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
                     <input type="text" id="name" class="form-control" placeholder="Enter Academic Term Name" required formControlName="name" [ngClass]="{ 'is-invalid': submitted && form['name'].errors }" />
                     <div class="invalid-feedback">Please enter a name</div>
                 </div>
