feat: Add Courses, Subjects, Analytics, Grading Systems, and Grade Setup components with routing and basic structure

--- a/src/app/pages/school/configuration/classes/classes.component.html
+++ b/src/app/pages/school/configuration/classes/classes.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <ul ngbNav #Bordered="ngbNav" [activeId]="2" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
+                <ul ngbNav #Bordered="ngbNav" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
                   <li [ngbNavItem]="1"><a ngbNavLink><i class="ri-artboard-line"></i> Classes</a>
                       <ng-template ngbNavContent></ng-template>
                   </li>
