--- a/src/app/pages/school/configuration/classes/classes.component.html
+++ b/src/app/pages/school/configuration/classes/classes.component.html
@@ -5,7 +5,42 @@
             <div class="card-body">
                 <ul ngbNav #Bordered="ngbNav" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
                   <li [ngbNavItem]="1"><a ngbNavLink><i class="ri-artboard-line"></i> Classes</a>
-                      <ng-template ngbNavContent></ng-template>
+                      <ng-template ngbNavContent>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="card" id="classSectionList">
+                                    <div  class="card-header border-bottom-dashed">
+                                        <div class="row g-4 align-items-center">
+                                            <div class="col-sm">
+                                                <div><h5 class="card-title mb-0"><i class="ri-artboard-line text-muted fs-18 align-middle me-1">   </i>Classes</h5></div>
+                                            </div>
+                                            <div class="col-sm-auto">
+                                                <div class="d-flex flex-wrap align-items-start gap-2">
+                                                    <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addClassModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Class</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <generic-app-table 
+                                    [headers]="classHeaders" 
+                                    [data]="classes" 
+                                    [showActions]="true" 
+                                    [showDelete]="true"
+                                    [customTemplates]="{ 'isActive': statusTemplate }"
+                                    (editClicked)="editClassModal(content, $event)"
+                                    (deleteClicked)="deleteClass($event)"
+                                    >
+                                    </generic-app-table>
+
+                                    <ng-template #statusTemplate let-status let-row="row">
+                                        <div class="status">
+                                            <span class="badge text-uppercase" [ngClass]="{ 'bg-success-subtle text-success': status === true, 'bg-danger-subtle text-danger': status !== true }">{{ getStatusLabel(status) }}</span>
+                                        </div>
+                                    </ng-template>
+                                </div>
+                            </div>
+                        </div>
+                      </ng-template>
                   </li>
                   <li [ngbNavItem]="2"><a ngbNavLink><i class="ri-menu-add-line"></i> Class Exam Types</a>
                       <ng-template ngbNavContent></ng-template>
@@ -28,4 +63,40 @@
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
+
+    <!--Class-->
+    <ng-template #content role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title" id="modalLabel">{{isClassCreateMode ? "Create" : "Update"}} Class</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissClassModal()"></button>
+        </div>
+        <form  class="tablelist-form" autocomplete="off" [formGroup]="classForm" (ngSubmit)="onSubmitClass()">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
+                    <input type="text" id="name" class="form-control" placeholder="Enter class Name" required formControlName="name" [ngClass]="{ 'is-invalid': submittedClass && classF['name'].errors }" />
+                    <div class="invalid-feedback">Please enter a name</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Next Class <span class="text-danger"></span></label>
+                    <ng-select [items]="classes" bindLabel="name" id="nextClass" bindValue="id" formControlName="nextClassId" placeholder="Select Next Class"></ng-select>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label mb-0">Is Active <span class="text-danger">*</span></label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submittedClass && classF['isActive'].invalid }">
+                        <option selected [ngValue]="null">Select status</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback" *ngIf="submittedClass && classF['isActive'].invalid">Please select an option</div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissClassModal()">Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
 </div>
