--- a/src/app/pages/school/configuration/classes/classes.component.html
+++ b/src/app/pages/school/configuration/classes/classes.component.html
@@ -3,12 +3,12 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <ul ngbNav #Bordered="ngbNav" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
+                <ul ngbNav #Bordered="ngbNav" [activeId]="1" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
                   <li [ngbNavItem]="1"><a ngbNavLink><i class="ri-artboard-line"></i> Classes</a>
                       <ng-template ngbNavContent>
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="card" id="classSectionList">
+                                <div class="card">
                                     <div  class="card-header border-bottom-dashed">
                                         <div class="row g-4 align-items-center">
                                             <div class="col-sm">
@@ -43,7 +43,63 @@
                       </ng-template>
                   </li>
                   <li [ngbNavItem]="2"><a ngbNavLink><i class="ri-menu-add-line"></i> Class Exam Types</a>
-                      <ng-template ngbNavContent></ng-template>
+                      <ng-template ngbNavContent>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="card">
+                                    <div  class="card-header border-bottom-dashed">
+                                        <div class="row g-4 align-items-center">
+                                            <div class="col-sm">
+                                                <div><h5 class="card-title mb-0"><i class="ri-menu-add-line text-muted fs-18 align-middle me-1">   </i>Class Exam Types</h5></div>
+                                            </div>
+                                            <div class="col-sm-auto">
+                                                <div class="d-flex flex-wrap align-items-start gap-2">
+                                                    <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addClassExamTypeModal(addClassExamTypeContent)"><i class="ri-add-line align-bottom me-1"></i> Add</button>
+                                                    <button class="btn btn-danger add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="deleteClassExamTypeModal(removeClassExamTypeContent)"><i class="ri-delete-bin-line align-bottom me-1"></i> Remove</button>
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-12">
+                                                <div class="row g-3">
+                                                    <div class="col-sm-8">
+                                                        <div>
+                                                            <ng-select [items]="classes" bindLabel="name" [(ngModel)]="classId" bindValue="id" placeholder="Select Class"></ng-select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        <div>
+                                                            <button type="button" class="btn btn-primary w-100" (click)="getClassExamTypes()"><i class="ri-equalizer-fill mx-2 align-bottom"></i>Filter</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <generic-app-table 
+                                    [headers]="classExamTypeHeaders" 
+                                    [data]="classExamTypes" 
+                                    [showActions]="false" 
+                                    tableId="classExamTypeTable"
+                                    [customTemplates]="{ 'isActive': classExamTypeStatusTemplate, 'examTypeId': examTypeTemplate, 'overrideDefaultWeight': overrideDefaultWeightTemplate }">
+                                    </generic-app-table>
+
+                                    <ng-template #classExamTypeStatusTemplate let-status let-row="row">
+                                        <div class="status">
+                                            <span class="badge text-uppercase" [ngClass]="{ 'bg-success-subtle text-success': status === true, 'bg-danger-subtle text-danger': status !== true }">{{ getStatusLabel(status) }}</span>
+                                        </div>
+                                    </ng-template>
+
+                                    <ng-template #examTypeTemplate let-examTypeId let-row="row">
+                                        <span>{{ getExamTypeName(examTypeId) }}</span>
+                                    </ng-template>
+
+                                    <ng-template #overrideDefaultWeightTemplate let-overrideDefaultWeight let-row="row">
+                                        <span>{{ getYesNoLabel(overrideDefaultWeight) }}</span>
+                                    </ng-template>
+
+                                </div>
+                            </div>
+                        </div>
+                      </ng-template>
                   </li>
                   <li [ngbNavItem]="3"><a ngbNavLink><i class="ri-book-2-line"></i> Class Subjects</a>
                     <ng-template ngbNavContent></ng-template>
@@ -67,7 +123,7 @@
     <!--Class-->
     <ng-template #content role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title" id="modalLabel">{{isClassCreateMode ? "Create" : "Update"}} Class</h5>
+            <h5 class="modal-title">{{isClassCreateMode ? "Create" : "Update"}} Class</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissClassModal()"></button>
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="classForm" (ngSubmit)="onSubmitClass()">
@@ -94,6 +150,95 @@
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissClassModal()">Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
+
+    <!--Class Exam Type-->
+    <ng-template #addClassExamTypeContent role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title">Add Exam Types</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissClassExamTypeModal()"></button>
+        </div>
+        <form  class="tablelist-form" autocomplete="off" [formGroup]="classExamTypeForm" (ngSubmit)="onSubmitAddClassExamType()">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label class="form-label">Exam Type <span class="text-danger">*</span></label>
+                    <ng-select [items]="examTypes" bindLabel="name"  bindValue="id" formControlName="examTypeId" placeholder="Select ExamType"  [ngClass]="{ 'is-invalid': submittedClassExamType && classExamTypeF['examTypeId'].invalid }"></ng-select>
+                    <div class="invalid-feedback">Select Exam Type</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Select classes <span class="text-danger">*</span></label>
+                    <ng-select [items]="classes" formControlName="classIds" bindLabel="name" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submittedClassExamType && classExamTypeF['classIds'].invalid }" placeholder="Select Classes">
+                        <ng-template ng-header-tmp>
+                            <div style="padding-left: 1px;">
+                              <button type="button" class="btn btn-link p-0 m-0" (click)="onSelectAllClasses()">Select All</button>
+                            </div>
+                          </ng-template>
+                    </ng-select>
+                    <div class="invalid-feedback">Select Classes</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label mb-0">Override Default Weight <span class="text-danger">*</span></label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="overrideDefaultWeight" [ngClass]="{ 'is-invalid': submittedClassExamType && classExamTypeF['overrideDefaultWeight'].invalid }">
+                        <option selected [ngValue]="null">Select</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback" *ngIf="submittedClassExamType && classExamTypeF['overrideDefaultWeight'].invalid">Please select an option</div>
+                </div>
+                <div class="mb-3">
+                    <label for="weight" class="form-label">Weight</label>
+                    <input type="number" id="weight" class="form-control" placeholder="Enter Weight" formControlName="weight" [ngClass]="{ 'is-invalid': submittedClassExamType && classExamTypeF['weight'].invalid }">
+                    <div class="invalid-feedback" *ngIf="submittedClassExamType && classExamTypeF['weight'].invalid">Weight is required when 'Override Default Weight' is set to Yes</div>
+                </div> 
+                <div class="mb-3">
+                    <label class="form-label mb-0">Is Active <span class="text-danger">*</span></label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submittedClassExamType && classExamTypeF['isActive'].invalid }">
+                        <option selected [ngValue]="null">Select status</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback" *ngIf="submittedClassExamType && classExamTypeF['isActive'].invalid">Please select an option</div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissClassExamTypeModal()">Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
+    <ng-template #removeClassExamTypeContent role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title">Remove Exam Types</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissClassExamTypeModal()"></button>
+        </div>
+        <form  class="tablelist-form" autocomplete="off" [formGroup]="classExamTypeDeleteForm" (ngSubmit)="onSubmitDeleteClassExamType()">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label class="form-label">Exam Type <span class="text-danger">*</span></label>
+                    <ng-select [items]="examTypes" bindLabel="name"  bindValue="id" formControlName="examTypeId" placeholder="Select ExamType"  [ngClass]="{ 'is-invalid': submitDeleteClassExamType && classExamTypeDeleteF['examTypeId'].invalid }"></ng-select>
+                    <div class="invalid-feedback">Select Exam Type</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Select classes <span class="text-danger">*</span></label>
+                    <ng-select [items]="classes" formControlName="classIds" bindLabel="name" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitDeleteClassExamType && classExamTypeDeleteF['classIds'].invalid }" placeholder="Select Classes">
+                        <ng-template ng-header-tmp>
+                            <div style="padding-left: 1px;">
+                              <button type="button" class="btn btn-link p-0 m-0" (click)="onSelectAllClassesForDelete()">Select All</button>
+                            </div>
+                          </ng-template>
+                    </ng-select>
+                    <div class="invalid-feedback">Select Classes</div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissClassExamTypeModal()">Close</button>
                     <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
                 </div>
             </div>
