--- a/src/app/shared/generic-app-table/generic-app-table.component.html
+++ b/src/app/shared/generic-app-table/generic-app-table.component.html
@@ -56,8 +56,8 @@
                 <button (click)="onPageChange(currentPage + 1)" [disabled]="(currentPage + 1) * pageSize >= filteredData.length" class="btn btn-light mx-2">&gt;</button>
             </div>
             <div class="d-flex align-items-center mb-2 mb-md-0">
-                <label for="pageSize" class="my-auto me-2">Rows</label> 
-                <select id="pageSize" [(ngModel)]="pageSize" (change)="onPageSizeChange($event)" class="form-select" style="width: auto;"><option *ngFor="let size of [5, 10, 20]" [value]="size">{{ size }}</option></select>
+                <label [for]="'pageSize-' + tableId" class="my-auto me-2">Rows</label> 
+                <select [id]="'pageSize-' + tableId"  [(ngModel)]="pageSize" (change)="onPageSizeChange($event)" class="form-select" style="width: auto;"><option *ngFor="let size of [5, 10, 20]" [value]="size">{{ size }}</option></select>
             </div>
         </div>
     </div>
