--- a/src/app/pages/school/configuration/subjects/subjects.component.html
+++ b/src/app/pages/school/configuration/subjects/subjects.component.html
@@ -1,1 +1,3 @@
 <app-breadcrumbs title="Subjects" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+
+<app-loading [loading]="loading"></app-loading>
