--- a/src/app/pages/school/configuration/subjects/subjects.component.html
+++ b/src/app/pages/school/configuration/subjects/subjects.component.html
@@ -1,3 +1,81 @@
 <app-breadcrumbs title="Subjects" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 
-<app-loading [loading]="loading"></app-loading>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header border-bottom-dashed">
+                <div class="row g-4 align-items-center">
+                    <div class="col-sm">
+                        <div><h5 class="card-title mb-0"><i class="ri-book-line text-muted fs-18 align-middle me-1">     </i>Subjects</h5></div>
+                    </div>
+                    <div class="col-sm-auto">
+                        <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button type="button" class="btn btn-primary add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Subject</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+          <app-loading [loading]="loading"></app-loading>
+
+            
+            <generic-app-table 
+                [headers]="headers" 
+                [data]="subjects" 
+                [showActions]="true"  
+                [showDelete]="false"
+                [customTemplates]="{ 'isActive': statusTemplate }"
+                (editClicked)="editModal(content, $event)">
+            </generic-app-table>
+
+                <ng-template #statusTemplate let-status let-row="row">
+                    <div class="status">
+                        <span class="badge text-uppercase" [ngClass]="{ 'bg-success-subtle text-success': status === true, 'bg-danger-subtle text-danger': status !== true }">{{ getActiveOrInactiveLabel(status) }}</span>
+                    </div>
+                </ng-template>
+        </div>
+    </div>
+    <ng-template #content role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title">{{isCreateMode ? "Create" : "Update"}} Subject</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
+        </div>
+        <form  class="tablelist-form" autocomplete="off" [formGroup]="subjectForm" (ngSubmit)="onSubmit()">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
+                    <input  type="text" id="name" class="form-control" placeholder="Enter Subject Name" formControlName="name" required [ngClass]="{ 'is-invalid': submitted && form['name'].invalid }">
+                    <div class="invalid-feedback">Name is required</div>
+                </div>
+                <div class="mb-3">
+                    <label for="code" class="form-label">Code</label>
+                    <input  type="text" id="code" class="form-control" placeholder="Enter Subject Code" formControlName="code">
+                </div>
+                <div class="mb-3">
+                    <label for="coefficient" class="form-label">Coefficient <span class="text-danger">*</span></label>
+                    <input  type="number" id="coefficient" class="form-control" placeholder="Enter Subject Coefficient" formControlName="coefficient" required [ngClass]="{ 'is-invalid': submitted && form['coefficient'].invalid }">
+                    <div class="invalid-feedback">Coefficient required</div>
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <input type="text" id="description" class="form-control" placeholder="Enter Subject Description" formControlName="description">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label mb-0">Is Active <span class="text-danger">*</span></label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && form['isActive'].invalid }">
+                        <option selected [ngValue]="null">Select status</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback" *ngIf="submitted && form['isActive'].invalid">Please select an option</div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
+</div>
